Fixes menu behind categories issue

--- a/src/app/shopping/products/product-filter/product-filter.component.scss
+++ b/src/app/shopping/products/product-filter/product-filter.component.scss
@@ -1,3 +1,4 @@
 .sticky-top {
   top: 73px;
+  z-index: 980;
 }
